test/sema/typeck/literal/bin-int32-overflow.out
error: number does not fit into type Int32.
--> bin-int32-overflow.dora:1:19
 | fn f() { let _x = 0b1_11111111_11111111_11111111_11111111i32; }
                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 | 
1 error found.
