test/sema/typeck/literal/bin-int32-overflow.dora
fn f() { let _x = 0b1_11111111_11111111_11111111_11111111i32; }
